WIP updated with alot of work I have been doing in another branch
Squashed commit of the following:

commit 2ce8f631ff232ba4122e36faa0147c50eab1f45e
Author: Keith Turner <kturner@apache.org>
Date:   Wed May 6 19:34:19 2020 -0400

    WIP Clean up public API

commit c34f91b909aa682424104bab5e8c78fde9721654
Author: Keith Turner <kturner@apache.org>
Date:   Wed May 6 19:08:32 2020 -0400

    WIP improve test

commit 2f8d612f19704de974280b6cc241757fa75201d2
Author: Keith Turner <kturner@apache.org>
Date:   Wed May 6 18:41:31 2020 -0400

    WIP improve test coverage

commit e02f50aec1506116c07b770b7f79abef7927354d
Author: Keith Turner <kturner@apache.org>
Date:   Wed May 6 13:06:45 2020 -0400

    WIP

commit f430eeb8501be6c9265171545ddfdc796ba17a3b
Author: Keith Turner <kturner@apache.org>
Date:   Wed May 6 13:04:20 2020 -0400

    WIP implemented compaction queued tracking for metrics

commit 00c42a4e1f0f77ae0ef108f1ff587bad0330f4d0
Author: Keith Turner <kturner@apache.org>
Date:   Tue May 5 00:19:57 2020 -0400

    WIP fix unit test

commit 3361216f66107323943e928474bf25b6c9fb5e2b
Author: Keith Turner <kturner@apache.org>
Date:   Mon May 4 19:35:24 2020 -0400

    WIP

commit e7ff29cb1512fc577a6d9d86ad176a10f9866748
Author: Keith Turner <kturner@apache.org>
Date:   Mon May 4 19:19:09 2020 -0400

    WIP

commit 40b455c8f421fb68fb2e7c53b19a5c8ad45e3e11
Author: Keith Turner <kturner@apache.org>
Date:   Mon May 4 19:05:32 2020 -0400

    WIP

commit 3e5e70334a28822d9a992f315784f75988e4f1c4
Author: Keith Turner <kturner@apache.org>
Date:   Mon May 4 18:59:09 2020 -0400

    WIP

commit 3697e95c57c3d9ce120dbae959dfe3e52f00d35d
Author: Keith Turner <kturner@apache.org>
Date:   Mon May 4 18:52:06 2020 -0400

    WIP

commit 79e9c723b4d9c0bebb6cb8788125317300f27776
Author: Keith Turner <kturner@apache.org>
Date:   Mon May 4 18:16:03 2020 -0400

    WIP fix build issues

commit 0f1a21949f5bb2e535381e5efb50ace9f8af09d2
Author: Keith Turner <kturner@apache.org>
Date:   Fri May 